--- a/tasks/elasticsearch.yml
+++ b/tasks/elasticsearch.yml
@@ -7,3 +7,7 @@
 - name: Include specific Elasticsearch
   include: elasticsearch-RedHat.yml
   when: ansible_os_family == 'RedHat'
+
+- name: Include elasticsearch-ssl
+  include: elasticsearch-ssl.yml
+  when: es_ssl_directory != '' and es_ssl_directory_fileglob != ''
